# llm-prose

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: deslop.yml  prose-lint.yml  validate.yml  version-bump.yml
commands/: prose-code-comments.md  prose-post.md  prose-pr-description.md  prose.md  review-comments.md  review-description.md  review-pr-comments.md  review-pr-description.md  review-pr.md  review-prose.md
docs/: anti-patterns.md
eval/: run.sh  run_description.sh
eval/fixtures/: pr_description_change.diff  pr_description_good.md  pr_description_iface.diff  pr_description_iface_draft.md  pr_description_nowhy.diff  pr_description_nowhy_draft.md  pr_description_overclaim.diff  pr_description_overclaim_draft.md  pr_description_overlong_draft.md  pr_description_stately.md  pr_description_template.md  sample.py
rules/: llm-prose.mdc
scripts/: deslop  prose-lint  release.sh  update.sh  validate.sh
skills/comment-bloat-review/: SKILL.md
skills/comment-bloat-review/scripts/: RULES.md  deslop.py
skills/post-prose-review/: SKILL.md
skills/pr-description-review/: SKILL.md
skills/review-prose/: SKILL.md
tools/deslop/: README.md  RULES.md  pyproject.toml
tools/deslop/deslop/: cli.py  (+2 more)
tools/prose-lint/: README.md  RULES.md  pyproject.toml
tools/prose-lint/prose_lint/: cli.py  core.py  diff.py  model.py  rules.py  ts.py
tools/prose-lint/tests/: test_cli.py  test_diff.py  test_invariants.py  test_rules.py
tools/prose-lint/tests/fixtures/: sample_go.go  sample_js.js
(+7 files in other folders)
