[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prose-lint"
version = "0.1.0"
description = "Deterministic, AST-based linter for the unambiguous half of the llm-prose comment rubric"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter-language-pack>=1.10",
    "tree-sitter>=0.23",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
prose-lint = "prose_lint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prose_lint*"]
